Fixed navbar issue and added dark mode

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -9,9 +9,12 @@
   --primary: #FFFFFF;
   --secondary: #000000;
   --accent: #767676;
-  --dark-primary: #000000;
-  --dark-secondary: #FFFFFF;
-  --dark-accent: #767676;
+}
+
+[data-theme="dark"] {
+  --primary: #000000;
+  --secondary: #FFFFFF;
+  --accent: #767676;
 }
 
 * {
